--- a/project.gradle
+++ b/project.gradle
@@ -1,1 +1,7 @@
-// Put your project-specific buildscript code in this file
+jar {
+	exclude 'biomesoplenty/**'
+	exclude 'extrabiomes/**'
+}
+
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
